addition to media query to ensure items aren't pushed offscreen on mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -199,6 +199,10 @@ body {
         margin-top: 15px;
     }
 
+    .column img:hover {
+        width: 50px;
+    }
+
     .explainer {
         bottom: 130px;
     }
